fixed Spacing

--- a/ICE_W1/styles/style.css
+++ b/ICE_W1/styles/style.css
@@ -4,7 +4,8 @@ body{
     text-align: center;
 }
 .top_title{
-    color: white
+    color: white;
+    font-size: 50px;
 }
 h1{
 	font-family: Arial;
@@ -14,7 +15,11 @@ h1{
     font-family: Times;
     font-size: 8;
 }
-
+li{
+    margin: 6px;
+    font-weight: bold;
+    font-size: 17px;
+}
 h2{
     color: white;
 }
@@ -22,17 +27,19 @@ h2{
     color: white;
     font-family: Arial;
     font-weight: bold;
-    font-size: 8;
+    font-size: 20px;
 }
 
 img{
     width: 200px;
+    margin: 10px;
     
 }
 .quote_4 {
 	color: white;
     font-family: Times;
     font-size: 19;
+    margin: 10px 80px;
 }
 .quote_3 {
     color: black;
@@ -43,4 +50,5 @@ img{
 }
 .bottom{
     font-weight: bold;
+    margin: 20px 30px 50px;
 }
